--- a/RecupereJa/Views/Shared/_Layout.cshtml
+++ b/RecupereJa/Views/Shared/_Layout.cshtml
@@ -16,11 +16,11 @@
         </main>
     </div>
 
-    @* Rodapé, retirado por momento pois não fica na parte inferior da tela*@
+  @*   Rodapé, retirado por momento pois não fica na parte inferior da tela
     <footer class="bg-dark text-light text-center p-4">
         <p class="mb-0">&copy; @DateTime.Now.Year - RecupereJá. Todos os direitos reservados.</p>
     </footer>
-
+ *@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
